# jubilant

./: .gitignore  README.md  netlify.toml  pyproject.toml  render.yaml  requirements.txt
bank-intel-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
bank-intel-platform/app/: cli.py  main.py
bank-intel-platform/app/api/: deps.py  router.py
bank-intel-platform/app/classification/: constants.py  engine.py  pattern_rules.py  rules.py  signature.py
bank-intel-platform/app/clients/: __init__.py  remote_parse_client.py
bank-intel-platform/app/config/: bank_patterns.yaml  default.yaml  manual_overrides.yaml
bank-intel-platform/app/core/: domain.py  settings.py
bank-intel-platform/app/db/: base.py  init_db.py  session.py
bank-intel-platform/app/detection/: bank_fin.py  doubt.py  odd_figure.py  private_fin.py  return_detector.py  sister_concern.py  transfer_reconciler.py
bank-intel-platform/app/entity_resolution/: resolver.py
bank-intel-platform/app/models/: enums.py  (+11 more)
bank-intel-platform/docs/: api_examples.md  architecture.md  frontend_plan.md  macos_distribution.md  render_deploy.md
bank-intel-platform/scripts/: build_macos_app.sh  learn_overrides_from_workbook.py  run_case_regressions.py  run_local.sh  verify_workbook_types.py
bank-intel-platform/tests/: test_bank_detection.py  test_classification.py  test_integrity.py  test_job_rules.py  test_narration.py  test_parser_generic.py  test_real_case_regressions.py  test_reconciliation.py  test_security.py  test_upload_validation.py  test_workbook_export.py
(+543 files in other folders)
