[project]
name = "bank-intel-platform"
version = "0.1.0"
description = "Analyst-grade Indian bank statement intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.30",
  "python-multipart>=0.0.9",
  "pdfplumber>=0.11.0",
  "pymupdf>=1.24.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.5",
  "rapidfuzz>=3.9.0",
  "python-dateutil>=2.9.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
bank-intel = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
desktop = [
  "pyinstaller>=6.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["out*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
